name:                phantheck
version:             0.1.0.0
synopsis:            Integrate quickchecked properties into the type system with phantom types

license:             GPL-3
license-file:        LICENSE
author:              pseudonom
maintainer:          escalier@riseup.net
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable phantheck
  main-is: Demo.hs
  other-modules:       Template
                       Type
  default-extensions:  DataKinds,
                       FlexibleInstances,
                       TemplateHaskell,
                       TypeFamilies,
                       ConstraintKinds,
                       PolyKinds,
                       TypeOperators,
                       UndecidableInstances,
                       RankNTypes,
                       TupleSections,
                       FlexibleContexts
  build-depends:       base,
                       QuickCheck,
                       split,
                       template-haskell,
                       regex-pcre,
                       safe,
                       process,
                       containers
  default-language:    Haskell2010
