name:                example
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pseudonom/example
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           Eric Easley 2016
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , phantheck
  default-extensions:  DataKinds
                       KindSignatures
                       PolyKinds
                       TypeFamilies
                       TypeOperators

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , example
                     , hspec
                     , QuickCheck
                     , phantheck
  default-extensions:  DataKinds
                       FlexibleInstances
                       PolyKinds
                       ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/pseudonom/example
