name:                phantheck
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pseudonom/phantheck
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           Eric Easley 2016
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     GHC.Type.Test
                     , GHC.Type.Test.Plugin
  build-depends:       base >= 4.7 && < 5
                     , cabal-helper
                     , directory
                     , filepath
                     , ghc
                     , ghc-mod
                     , ghc-paths
                     , ghc-tcplugins-extra
                     , QuickCheck
                     , tagged
                     , template-haskell
                     , transformers
  default-extensions:  ConstraintKinds
                       DataKinds
                       ExistentialQuantification
                       FlexibleContexts
                       LambdaCase
                       PolyKinds
                       RecordWildCards
                       TupleSections
                       TypeFamilies
                       TypeOperators

source-repository head
  type:     git
  location: https://github.com/pseudonom/phantheck
